# pcis

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.example.json  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_demo.sh  setup.sh  start_demo.sh  verify.sh
adapters/: __init__.py  langchain_memory.py
agent-plugin/: README.md  plugin.json  plugin.py
core/: __init__.py  action_log.py  adversarial_validator.py  audit.py  belief_decay.py  belief_history.py  belief_traversal.py  belief_updater.py  doc_ingest.py  events.py  gardener.py  gardener_connections.py  gardener_healthcheck.py  knowledge_prune.py  knowledge_search.py  knowledge_synapses.py  knowledge_tree.py  model_agnosticity_monitor.py  multi_agent.py  signing.py  verify_memory.py
demo/: adversarial_validation_run.json  adversarial_validator.py  compliance-demo.html  demo_search_index.json  demo_synapses.json  demo_tree.json  external_validation_run.json  generate_demo_tree.py  generate_graph.py  gigachat_validation_run.json  hub.html  index.html  sample_policy.txt  seed_demo_counters.py  server.py  synapse_graph.html  synapse_graph_template.html
docs/: CROSS-MODEL-BENCHMARK.md  PCIS.md  SIGNING.md  multi-agent.md  pcis-stack-diagram.html
openclaw-plugin/: README.md  plugin.py
pcis/: __init__.py  cli.py  core.py
scripts/: a2a_demo.py  back_sign_leaves.py  deploy_signing.py  diagnose_demo_tree.sh  install-hooks.sh  (+1 more)
(+67 files in other folders)
